# Other-codes

./: id_rsa  id_rsa.pub  ignore.gitignore
Lab1/: CMakeLists.txt
Lab1/lib/: CMakeLists.txt
Lab1/lib/include/: Arrays.h  OPI_1.h  Point.h  Shape.h
Lab1/lib/src/: Arrays.cpp  OPI_1.cpp  Point.cpp  Shape.cpp
Lab1/main/: Arrays_test.cpp  OPI_1_test.cpp  Point_test.cpp  Shape_test.cpp  Source.cpp
Lab1/Теоретический материал/: Перегрузка операторов.docx
Lab2/: CMakeLists.txt
Lab2/lib/: CMakeLists.txt
Lab2/lib/include/: StringFMT.h
Lab2/lib/src/: StringFMT.cpp
Lab2/main/: StringFMT_test.cpp
Project_1/: 1.cpp  2.cpp  Maths-Anastasia.cpp  Maths.cpp
Project_11/: 2.cpp  Shiphrator.cpp  main.cpp
Project_2/: Arrays.cpp  Arrays.h  main.cpp
Project_3/: 1.1.cpp  OPI_1.cpp  OPI_1.h  main.cpp  main_1.cpp
Project_4/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  9.cpp  text.txt  version3.cpp  поразрядная сортировка.cpp
Project_5/: table.csv  test_1.cpp  test_2.cpp  test_3.cpp  test_4.cpp  test_5.cpp
Project_6/: 1.cpp  2.cpp  function.cpp  function.h  input.txt  main.cpp  output.txt
Project_7/: 1.cpp  2.cpp  MainWindow.cpp  MainWindow.h  Prog_1.cpp  Prog_2.cpp  main.cpp  prog.cpp  table.csv  агригации.cpp  ассоциации.cpp  использование.cpp  практика 2.cpp
Project_8/: lab4.cpp  text.txt
Project_9/: 1.cpp  main (1).cpp  main (2).cpp  main.cpp  text.txt
