cmake_minimum_required(VERSION 3.16)
project(Lab1)
add_subdirectory(lib)
add_executable(main main/Point_test.cpp)
add_executable(main1 main/Arrays_test.cpp)
add_executable(main2 main/Shape_test.cpp)
add_executable(main3 main/OPI_1_test.cpp)
target_link_libraries(main PRIVATE test::lib)
target_link_libraries(main1 PRIVATE test::lib)
target_link_libraries(main2 PRIVATE test::lib)
target_link_libraries(main3 PRIVATE test::lib)